# sisl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindEigen3.cmake  FindFFTW.cmake  FindViennaCL.cmake
doc/: config.dox
doc/html/: annotated.html  array_8hpp_source.html  base__function_8hpp_source.html  base__lattice_8hpp_source.html  basis__function_8hpp_source.html  body__centered__cubic_8hpp_source.html  cartesian__cubic_8hpp_source.html  cartesian__planar_8hpp_source.html  class__fftwalloc-members.html  class__fftwalloc.html  classes.html  classsisl_1_1array__n-members.html  classsisl_1_1array__n.html  classsisl_1_1array__n__coll__graph.map  classsisl_1_1array__n__coll__graph.md5  classsisl_1_1array__n__inherit__graph.map  classsisl_1_1array__n__inherit__graph.md5  classsisl_1_1base__lattice-members.html  classsisl_1_1base__lattice.html  classsisl_1_1base__lattice__inherit__graph.map  classsisl_1_1base__lattice__inherit__graph.md5  classsisl_1_1basis__function-members.html  classsisl_1_1basis__function.html  classsisl_1_1basis__function__inherit__graph.map  classsisl_1_1basis__function__inherit__graph.md5  classsisl_1_1bcc__quintic__rdo-members.html  classsisl_1_1bcc__quintic__rdo.html  classsisl_1_1bcc__quintic__rdo__coll__graph.md5  classsisl_1_1bcc__quintic__rdo__inherit__graph.map  classsisl_1_1bcc__quintic__rdo__inherit__graph.md5  classsisl_1_1body__centered__cubic-members.html  classsisl_1_1body__centered__cubic.html  classsisl_1_1body__centered__cubic__coll__graph.md5  classsisl_1_1body__centered__cubic__inherit__graph.map  classsisl_1_1body__centered__cubic__inherit__graph.md5  classsisl_1_1cartesian__cubic-members.html  classsisl_1_1cartesian__cubic.html  classsisl_1_1cartesian__cubic__coll__graph.map  classsisl_1_1cartesian__cubic__coll__graph.md5  classsisl_1_1cartesian__cubic__inherit__graph.md5  (+193 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  functions_1.js  (+32 more)
doc/latex/: annotated.tex  class__fftwalloc.tex  classsisl_1_1array__n.tex  classsisl_1_1array__n__coll__graph.md5  classsisl_1_1array__n__inherit__graph.md5  classsisl_1_1base__lattice.tex  classsisl_1_1base__lattice__inherit__graph.md5  classsisl_1_1basis__function.tex  classsisl_1_1basis__function__inherit__graph.md5  classsisl_1_1bcc__quintic__rdo.tex  classsisl_1_1bcc__quintic__rdo__coll__graph.md5  classsisl_1_1bcc__quintic__rdo__inherit__graph.md5  classsisl_1_1body__centered__cubic.tex  classsisl_1_1body__centered__cubic__coll__graph.md5  classsisl_1_1body__centered__cubic__inherit__graph.md5  classsisl_1_1cartesian__cubic.tex  classsisl_1_1cartesian__cubic__coll__graph.md5  classsisl_1_1cartesian__cubic__inherit__graph.md5  classsisl_1_1cartesian__planar.tex  classsisl_1_1cartesian__planar__coll__graph.md5  classsisl_1_1cartesian__planar__inherit__graph.md5  classsisl_1_1function.tex  classsisl_1_1function__inherit__graph.md5  classsisl_1_1nearest__neighbor.tex  classsisl_1_1nearest__neighbor__coll__graph.md5  classsisl_1_1nearest__neighbor__inherit__graph.md5  classsisl_1_1si__function.tex  classsisl_1_1si__function__coll__graph.md5  classsisl_1_1si__function__inherit__graph.md5  classsisl_1_1sparse__array__n.tex  classsisl_1_1sparse__array__n__coll__graph.md5  classsisl_1_1sparse__array__n__inherit__graph.md5  classsisl_1_1test_1_1marschner__lobb.tex  classsisl_1_1test_1_1marschner__lobb__coll__graph.md5  classsisl_1_1test_1_1marschner__lobb__inherit__graph.md5  classsisl_1_1test_1_1test__window.tex  classsisl_1_1test_1_1test__window__coll__graph.md5  classsisl_1_1test_1_1test__window__inherit__graph.md5  classsisl_1_1tp__cubic.tex  classsisl_1_1tp__cubic__coll__graph.md5  (+44 more)
examples/: CMakeLists.txt
examples/0_arrays/001_array_example/: main.cpp
examples/0_arrays/002_sparse_array_example/: main.cpp
examples/2_images/200_simple_image/: main.cpp
examples/3_volumetric/300_simple_cc/: main.cpp
examples/3_volumetric/301_bucky_isosurface/: main.cpp
examples/3_volumetric/302_resample_marschner_lobb_cc/: main.cpp
examples/3_volumetric/303_resample_marschner_lobb_bcc/: main.cpp
include/: primitives.hpp
include/sisl/: primitives.hpp  sisl.hpp
include/sisl/basis/: basis_function.hpp  nearest_neighbor.hpp  tp_cubic.hpp  tp_cubic_imom.hpp  tp_linear.cpp  tp_linear.hpp  tp_quadratic.hpp
include/sisl/function/: base_function.hpp  function_base.hpp  si_function.hpp
include/sisl/io/: raw_2d.hpp  raw_3d.cpp  (+2 more)
test/: CMakeLists.txt  array_test.cpp  bcc_test.cpp  cubic_cartesian.cpp  cubic_cartesian_test.cpp  io_raw_test.cpp  mesh_output_test.cpp  ppm_image_test.cpp  primitive_test.cpp
(+16 files in other folders)
